k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: mickeyjey8/personal-website:latest
          ports:
            - containerPort: 8000
