k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-website
spec:
  selector:
    app: personal-website
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
